--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^133.0.0",
     "autoprefixer": "10.4.16",
     "html-pdf-node": "^1.0.0",
     "next": "14.2.3",
     "nodemailer": "6.9.8",
     "openai": "4.28.4",
     "postcss": "8.4.31",
+    "puppeteer-core": "^24.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.4"
